force-app/main/default/objects/Unit__c/fields/Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area__c</fullName>
    <label>Terrace Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>