force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Floor__c</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>